--- a/share/index.html
+++ b/share/index.html
@@ -179,17 +179,18 @@
         </div>
 
         <!-- Department and Program Charts -->
-        <div id="department-charts-container" class="flex flex-col md:flex-row justify-center gap-8 items-start mt-6 hidden">
+        <div id="department-charts-container" class="flex flex-col justify-center items-center gap-8 mt-6 hidden">
             <!-- Department Attendance Bar Chart -->
-            <div class="w-full md:w-1/2">
+            <div class="w-full md:w-1/2 mx-auto">
                 <div class="flex justify-center items-center h-64 md:h-80">
                     <canvas id="departmentYearChart" class="max-h-full max-w-full"></canvas>
                 </div>
             </div>
             
-            <!-- Program Charts Container (New) -->
-            <div id="program-charts-container" class="w-full md:w-1/2 flex flex-col gap-8">
-                <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">Programs</h2>
+            <!-- Program Charts Container -->
+            <div class="w-full">
+                <h2 class="text-2xl font-bold text-gray-800 mb-4 text-center">Programs</h2>
+                <div id="program-charts-container" class="grid grid-cols-1 sm:grid-cols-2 gap-8"></div>
             </div>
         </div>
         
