--- a/overview/index.html
+++ b/overview/index.html
@@ -168,7 +168,7 @@
         const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
         const EVENTS_COLLECTION_NAME = "event_attendance_tracker";
-        const PUBLIC_DATA_PATH = `artifacts/${appId}/public/data/${EVENTS_COLLECTION_NAME}`;
+        const PUBLIC_DATA_PATH = ``artifacts/${FIREBASE_PROJECT_ID}/public/data/${EVENTS_COLLECTION_NAME}`;
 
         // --- DOM Element References ---
         const eventNameInput = document.getElementById('event-name-input');
